Changing icon large size so it does not wrap in firefox. fixes #3706

--- a/app/assets/stylesheets/scholarsphere-bootstrap.css
+++ b/app/assets/stylesheets/scholarsphere-bootstrap.css
@@ -302,3 +302,8 @@ ol.faq ol ol li { list-style-type: lower-roman }
      color: goldenrod;
 }
 
+.icon-large {
+    font-size: 1.2em;
+}
+
+
